--- a/Calculadora de matrizes.ipynb
+++ b/Calculadora de matrizes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4ZgD9QWRswyiksKfz5i48",
+      "authorship_tag": "ABX9TyN4hAZvB6yqbpWGHWctuqN1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,13 +23,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/luiss1n/Teste-Faculdade./blob/main/Calculadora%20de%20matrizes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/luiss1n/Atividades-faculdade./blob/main/Calculadora%20de%20matrizes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# **QUEBREI MINHA MENTE PRA FAZER ISSO, MAS TÁ AI.**"
+        "# **Calculadora de matrizes, by Luis Henrique.**"
       ],
       "metadata": {
         "id": "NC1EVfTrlPJm"
@@ -150,7 +150,7 @@
         "        except ValueError as e:\n",
         "            print(\"Erro:\", e)\n",
         "        except Exception as e:\n",
-        "            print(\"Nao sei oq aconteceu, mas aconteceu algum erro:\", e)\n",
+        "            print(\"Nao sei oq aconteceu, mas aconteceu esse erro ai ó :\", e)\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    menu()\n",
@@ -161,15 +161,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# **Em alguns momentos usei o chat gpt pra me ajudar com os erros do código, tmj.**"
-      ],
-      "metadata": {
-        "id": "hU1wy1fclgY-"
-      }
     }
   ]
 }
