--- a/Calculadora de matrizes.ipynb
+++ b/Calculadora de matrizes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4hAZvB6yqbpWGHWctuqN1",
+      "authorship_tag": "ABX9TyM0rXwwJqXOb0s9DAVIZm2x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,33 +42,33 @@
         "\n",
         "def soma_matrizes(A, B):\n",
         "    if A.shape != B.shape:\n",
-        "        raise ValueError(\"As matrizes necessitam ter o mesmo número de linhas e colunas para a soma, arruma isso ai.\")\n",
+        "        raise ValueError(\"As matrizes necessitam ter o mesmo número de linhas e colunas para a soma, modifica isso.\")\n",
         "    return A + B\n",
         "\n",
         "def subtrai_matrizes(A, B):\n",
         "    if A.shape != B.shape:\n",
-        "        raise ValueError(\"As matrizes necessitam ter o mesmo número de linhas e colunas para a subtração, arruma isso ai.\")\n",
+        "        raise ValueError(\"As matrizes necessitam ter o mesmo número de linhas e colunas para a subtração, modifica isso.\")\n",
         "    return A - B\n",
         "\n",
         "def multiplica_matrizes(A, B):\n",
         "    if A.shape[1] != B.shape[0]:\n",
-        "        raise ValueError(\"O número de colunas da matriz A deve ser igual ao número de linhas da matriz B, arruma isso ai.\")\n",
+        "        raise ValueError(\"O número de colunas da matriz A deve ser igual ao número de linhas da matriz B, modifica isso.\")\n",
         "    return A @ B\n",
         "\n",
         "def calcula_determinante(A):\n",
         "    if A.shape[0] != A.shape[1]:\n",
-        "        raise ValueError(\"A matriz deve ser quadrada para calcular o determinante, arruma isso ai.\")\n",
+        "        raise ValueError(\"A matriz deve ser quadrada para calcular o determinante, modifica isso\")\n",
         "    return np.linalg.det(A)\n",
         "\n",
         "def resolve_sistema_cramer(A, B):\n",
         "    if A.shape[0] != A.shape[1]:\n",
         "        raise ValueError(\"A matriz A deve ser quadrada, arruma isso ai.\")\n",
         "    if B.shape[0] != A.shape[0]:\n",
-        "        raise ValueError(\"A matriz B deve ter o mesmo número de linhas de A, arruma isso ai.\")\n",
+        "        raise ValueError(\"A matriz B deve ter o mesmo número de linhas de A, modifica isso.\")\n",
         "\n",
         "    det_A = np.linalg.det(A)\n",
         "    if det_A == 0:\n",
-        "        raise ValueError(\"Sistema sem solução única (determinante nula)\")\n",
+        "        raise ValueError(\"Sistema sem solução única, pois a sua determinante é nula\")\n",
         "\n",
         "    n = A.shape[0]\n",
         "    num_colunas = B.shape[1] if len(B.shape) > 1 else 1\n",
@@ -97,7 +97,7 @@
         "    for i in range(linhas):\n",
         "        linha = list(map(float, input(f\"Linha {i+1}: \").split()))\n",
         "        while len(linha) != colunas:\n",
-        "            print(\"Número de colunas incorreto, arruma isso ai.\")\n",
+        "            print(\"Número de colunas incorreto, modifica isso.\")\n",
         "            linha = list(map(float, input(f\"Linha {i+1}: \").split()))\n",
         "        matriz.append(linha)\n",
         "\n",
@@ -157,10 +157,128 @@
         "\n"
       ],
       "metadata": {
-        "id": "UZIrqV-ylYJV"
+        "id": "UZIrqV-ylYJV",
+        "outputId": "32aff470-570c-4953-9408-5e9aa39c0f73",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Bem vindo ao Resolvedor de Matrizes, escolha a sua opção de conta:\n",
+            "1. Soma de Matrizes\n",
+            "2. Subtração de Matrizes\n",
+            "3. Multiplicação de Matrizes\n",
+            "4. Cálculo do Determinante\n",
+            "5. Resolução de Sistemas Lineares (Método de Cramer)\n",
+            "0. Sair\n",
+            "Digite a opção desejada: 5\n",
+            "Digite o número de linhas da matriz A (coeficientes): 3\n",
+            "Digite o número de colunas da matriz A (coeficientes): 2\n",
+            "Digite os elementos da matriz A (coeficientes) separados por espaço:\n",
+            "Linha 1: 2 1 1\n",
+            "Número de colunas incorreto, arruma isso ai.\n",
+            "Linha 1: 2 1\n",
+            "Linha 2:  2 3\n",
+            "Linha 3: 3 2\n",
+            "Digite o número de linhas da matriz B (termos independentes): 2\n",
+            "Digite o número de colunas da matriz B (termos independentes): 3\n",
+            "Digite os elementos da matriz B (termos independentes) separados por espaço:\n",
+            "Linha 1: 2 1 3\n",
+            "Linha 2: 2 3 3\n",
+            "Erro: A matriz A deve ser quadrada, arruma isso ai.\n",
+            "\n",
+            "Bem vindo ao Resolvedor de Matrizes, escolha a sua opção de conta:\n",
+            "1. Soma de Matrizes\n",
+            "2. Subtração de Matrizes\n",
+            "3. Multiplicação de Matrizes\n",
+            "4. Cálculo do Determinante\n",
+            "5. Resolução de Sistemas Lineares (Método de Cramer)\n",
+            "0. Sair\n",
+            "Digite a opção desejada: 5\n",
+            "Digite o número de linhas da matriz A (coeficientes): 2\n",
+            "Digite o número de colunas da matriz A (coeficientes): 2\n",
+            "Digite os elementos da matriz A (coeficientes) separados por espaço:\n",
+            "Linha 1: 2 1\n",
+            "Linha 2: 2 3\n",
+            "Digite o número de linhas da matriz B (termos independentes): 3 3\n",
+            "Erro: invalid literal for int() with base 10: '3 3'\n",
+            "\n",
+            "Bem vindo ao Resolvedor de Matrizes, escolha a sua opção de conta:\n",
+            "1. Soma de Matrizes\n",
+            "2. Subtração de Matrizes\n",
+            "3. Multiplicação de Matrizes\n",
+            "4. Cálculo do Determinante\n",
+            "5. Resolução de Sistemas Lineares (Método de Cramer)\n",
+            "0. Sair\n",
+            "Digite a opção desejada: 3 2\n",
+            "Opção inválida. Tente novamente algum número de 0 a 5.\n",
+            "\n",
+            "Bem vindo ao Resolvedor de Matrizes, escolha a sua opção de conta:\n",
+            "1. Soma de Matrizes\n",
+            "2. Subtração de Matrizes\n",
+            "3. Multiplicação de Matrizes\n",
+            "4. Cálculo do Determinante\n",
+            "5. Resolução de Sistemas Lineares (Método de Cramer)\n",
+            "0. Sair\n",
+            "Digite a opção desejada: 5\n",
+            "Digite o número de linhas da matriz A (coeficientes): 3 3\n",
+            "Erro: invalid literal for int() with base 10: '3 3'\n",
+            "\n",
+            "Bem vindo ao Resolvedor de Matrizes, escolha a sua opção de conta:\n",
+            "1. Soma de Matrizes\n",
+            "2. Subtração de Matrizes\n",
+            "3. Multiplicação de Matrizes\n",
+            "4. Cálculo do Determinante\n",
+            "5. Resolução de Sistemas Lineares (Método de Cramer)\n",
+            "0. Sair\n",
+            "Digite a opção desejada: 5\n",
+            "Digite o número de linhas da matriz A (coeficientes): 3\n",
+            "Digite o número de colunas da matriz A (coeficientes): 3\n",
+            "Digite os elementos da matriz A (coeficientes) separados por espaço:\n",
+            "Linha 1: 2 3 1\n",
+            "Linha 2: 2 1 \n",
+            "Número de colunas incorreto, arruma isso ai.\n",
+            "Linha 2: 1 2 2\n",
+            "Linha 3:  2 3 1\n",
+            "Digite o número de linhas da matriz B (termos independentes): 3\n",
+            "Digite o número de colunas da matriz B (termos independentes): 3\n",
+            "Digite os elementos da matriz B (termos independentes) separados por espaço:\n",
+            "Linha 1: 3 3 3\n",
+            "Linha 2:  3 1 2\n",
+            "Linha 3: 3 4 5\n",
+            "Erro: Sistema sem solução única (determinante nula)\n",
+            "\n",
+            "Bem vindo ao Resolvedor de Matrizes, escolha a sua opção de conta:\n",
+            "1. Soma de Matrizes\n",
+            "2. Subtração de Matrizes\n",
+            "3. Multiplicação de Matrizes\n",
+            "4. Cálculo do Determinante\n",
+            "5. Resolução de Sistemas Lineares (Método de Cramer)\n",
+            "0. Sair\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-6cfa8300bba8>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 116\u001b[0;31m     \u001b[0mmenu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    117\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-1-6cfa8300bba8>\u001b[0m in \u001b[0;36mmenu\u001b[0;34m()\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"0. Sair\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m         \u001b[0mopcao\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Digite a opção desejada: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ]
     }
   ]
 }
